# Intelligent-Crop-Disease-Identification-System-based-on-Deep-Learning

./: .gitignore  README.md  check_engines.py  fix_model_export.py  process.md  verify_inference.py  verify_model.py
backend/: README.md  cropvision.db  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  history.py  predict.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  prediction.py  user.py
backend/app/schemas/: __init__.py  prediction.py  user.py
backend/app/services/: __init__.py  ai_service.py
backend/training/: distillation.py  models.py  pruning.py  quantization.py  run_training_windows.bat  setup_data.sh  train_advanced.py
docs/: backend-api-extension.md  frontend-requirements.md  windows_training_guide.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/components/: GlassCard.vue
frontend/src/constants/: diseases.ts
frontend/src/layouts/: AppHeader.vue  AppLayout.vue  AppSidebar.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  settings.ts
frontend/src/types/: index.ts
frontend/src/views/: Analytics.vue  Dashboard.vue  DiseaseDetail.vue  Diseases.vue  History.vue  Login.vue  NotFound.vue  Predict.vue  Register.vue  Settings.vue
notebooks/: Advanced_Training_Colab.ipynb  train_model_colab.md  training_colab_viz.ipynb
scripts/: train_local_gpu.py
